Test succesfuls Ændrede noget i GridCoverage2D linje 27 getfirst() to get(0)